--- a/capstoneProject/MD/app/src/main/res/values/strings.xml
+++ b/capstoneProject/MD/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="tracking">Track</string>
     <string name="news">News</string>
     <string name="history">History</string>
-    <string name="title_welcome">Welcome \nto the StuntTrack</string>
+    <string name="title_welcome">Welcome \nto the StunTrack</string>
     <string name="welcome_description">Prevent stunting with early \ndetection and growth \nmonitoring for your child\'s \nhealth and a brighter future</string>
     <string name="button_welcome">Get Started</string>
     <string name="news_title">News Title</string>
