prediksi tinggi nutrisi, status history, ngerapihin layout

--- a/capstoneProject/MD/app/src/main/res/values/strings.xml
+++ b/capstoneProject/MD/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="history_title">Detection\nHistory</string>
     <string name="empty">nama kosong</string>
     <string name="news_articles">News \nArticles</string>
+    <string name="result">Result</string>
 </resources>
