--- a/capstoneProject/MD/app/src/main/res/values/strings.xml
+++ b/capstoneProject/MD/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="empty">nama kosong</string>
     <string name="news_articles">News \nArticles</string>
     <string name="result">Result</string>
+    <string name="error_message">Error: %1$s</string>
 </resources>
